--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,8 +10,13 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+- task: Docker@2
+  inputs:
+    containerRegistry: 'docker account connection'
+    repository: 'doughertyaaron / web-app-devops-project'
+    command: 'buildAndPush'
+    Dockerfile: '**/Dockerfile'
+    tags: 'version1'
 
 - script: |
     echo Add other tasks to build, test, and deploy your project.
