--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'docker account connection'
-    repository: 'doughertyaaron / web-app-devops-project'
+    repository: 'doughertyaaron/web-app-devops-project'
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
     tags: 'version1'
