Update azure-pipelines.yml for Azure Pipelines
edited dockerfile name in pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ steps:
     containerRegistry: 'docker account connection'
     repository: 'doughertyaaron/web-app-devops-project'
     command: 'buildAndPush'
-    Dockerfile: '**/Dockerfile'
+    Dockerfile: '**/dockerfile'
     tags: 'version1'
 
 - script: |
